--- a/management-report/markdown/subpage-additional-analysis.Rmd
+++ b/management-report/markdown/subpage-additional-analysis.Rmd
@@ -219,9 +219,11 @@ legend_data <- tibble(
 legend_data$geog <- factor(legend_data$geog, levels = unique(legend_data$geog))
 
 # total referrals for tables
-hb_totals_table <- bind_rows(pds_scot_totals, pds_hb_totals) %>%  pivot_wider(names_from = geog, values_from = total_referrals)
+hb_totals_table <- bind_rows(pds_scot_totals, pds_hb_totals) %>%
+  mutate(total_referrals = format(total_referrals, big.mark = ",")) %>% pivot_wider(names_from = geog, values_from = total_referrals)
 
-ijb_totals_table <- bind_rows(pds_scot_totals, pds_ijb_totals) %>% pivot_wider(names_from = geog, values_from = total_referrals)
+ijb_totals_table <- bind_rows(pds_scot_totals, pds_ijb_totals)  %>%
+  mutate(total_referrals = format(total_referrals, big.mark = ",")) %>% pivot_wider(names_from = geog, values_from = total_referrals)
 
 all_totals_table_2 <- bind_rows(
 
@@ -301,14 +303,14 @@ bscols(widths = c(1,5,NA),
 <h2 style="margin-left: 70px; margin-top: 0px; margin-bottom: 0px"> Proportion of Referrals by Subtype of Dementia and Integration Authority Area</h2>
 ```{r plot-prop-subtype-legend-ijb}
 bscols(widths = 12,
-div(style=css(marginBottom="-23px",height="95px", width="90%"), plot_prop_legend(pds_all_subtype %>% filter(geog == "Scotland"), measure = subtype, measure_text = "Subtype of Dementia: "))
+div(style=css(marginBottom="-23px",height="95px", width="90%"), plot_prop_legend(pds_all_subtype %>% filter(geog == "Scotland"), measure = subtype, colours = c("#3F3685", "#9B4393", "#0078D4", "#948DA3", "#1E7F84", "#6B5C85", "#83BB26", "#C73918")))
 )
 ```
 
 ```{r plot-prop-subtype-ijb}
 bscols(widths = 12,
   div(style = css(width="98%", height="400px"),
-      plot_prop(pds_subtype_data_ijb, measure = subtype, measure_text = "Subtype of Dementia: ", xlabel = "Integration Authority Area")
+      plot_prop(pds_subtype_data_ijb, measure = subtype, measure_text = "Subtype of Dementia: ", xlabel = "Integration Authority Area", colours = c("#3F3685", "#9B4393", "#0078D4", "#948DA3", "#1E7F84", "#6B5C85", "#83BB26", "#C73918"))
 )
 )
 
@@ -374,13 +376,14 @@ bscols(widths = c(1,5,NA),
 <h2 style="margin-left: 70px; margin-top: 0px; margin-bottom: 0px">Proportion of Referrals by Subtype of Dementia and Health Board </h2>
 ```{r plot-prop-subtype-legend-hb}
 bscols(widths = 12,
-div(style=css(marginBottom="-23px",height="95px", width="90%"), plot_prop_legend(pds_all_subtype %>% filter(geog == "Scotland"), measure = subtype, measure_text = "Subtype of Dementia: ")))
+div(style=css(marginBottom="-23px",height="95px", width="90%"), plot_prop_legend(pds_all_subtype %>% filter(geog == "Scotland"), measure = subtype, colours = c("#3F3685", "#9B4393", "#0078D4", "#948DA3", "#1E7F84", "#6B5C85", "#83BB26", "#C73918"))
+    ))
 ```
 
 ```{r plot-prop-subtype-hb}
 bscols(widths = 12,
   div(style = css(width="98%", height="400px"),
-      plot_prop(pds_subtype_data_hb, measure = subtype, measure_text = "Subtype of Dementia: ", xlabel = "Health Board")
+      plot_prop(pds_subtype_data_hb, measure = subtype, measure_text = "Subtype of Dementia: ", xlabel = "Health Board", colours = c("#3F3685", "#9B4393", "#0078D4", "#948DA3", "#1E7F84", "#6B5C85", "#83BB26", "#C73918"))
 )
 )
 
@@ -491,7 +494,7 @@ bscols(widths = c(1,5,NA),
 ```{r plot-ldp-subtype-legend}
 bscols(widths = 12,
        div(style = css(height="30px"),
-plot_trend_rate_legend_1(legend_data)),NULL
+plot_rate_line_legend_1(legend_data)),NULL
 )
 
 ```
@@ -499,7 +502,8 @@ plot_trend_rate_legend_1(legend_data)),NULL
 ```{r plot-ldp-subtype}
 bscols(widths = 12,
   div(style = css(width="98%", height="450px"),
-plot_ldp_line(ldp_all_subtype_data, measure = subtype, measure_text = "Subtype of Dementia: ", ncol = 4, nrow = 2))
+plot_ldp_line(ldp_all_subtype_data, measure = subtype, measure_text = "Subtype of Dementia: ", ncol = 4, nrow = 2, colours = c("#3F3685", "#9B4393", "#0078D4", "#948DA3", "#1E7F84", "#6B5C85", "#83BB26", "#C73918"))
+)
 )
 
 ```
@@ -602,7 +606,8 @@ bscols(widths = c(1,5,NA),
 ```{r plot-prop-stage-legend-ijb}
 
 bscols(widths = 12,
-div(style=css(marginBottom="-20px",height="70px"), plot_prop_legend(pds_all_stage %>% filter(geog == "Scotland"), measure = stage, measure_text = "Stage of Illness: ")))
+div(style=css(marginBottom="-20px",height="70px"), plot_prop_legend(pds_all_stage %>% filter(geog == "Scotland"), measure = stage, colours = c("#3F3685", "#9B4393", "#0078D4", "#83BB26", "#C73918"))
+    ))
 
 ```
 
@@ -610,8 +615,8 @@ div(style=css(marginBottom="-20px",height="70px"), plot_prop_legend(pds_all_stag
 ```{r plot-prop-stage-ijb}
 bscols(widths = 12,
   div(style = css(width="98%", height="400px"),
-      plot_prop(pds_stage_data_ijb, measure = stage, measure_text = "Stage of Illness: ", xlabel = "Integration Authority Area")
-)
+      plot_prop(pds_stage_data_ijb, measure = stage, measure_text = "Stage of Illness: ", xlabel = "Integration Authority Area", colours = c("#3F3685", "#9B4393", "#0078D4", "#83BB26", "#C73918"))
+  )
 )
 
 ```
@@ -679,7 +684,8 @@ bscols(widths = c(1,5,NA),
 ```{r plot-prop-stage-legend-hb}
 
 bscols(widths = 12,
-div(style=css(marginBottom="-20px",height="70px"), plot_prop_legend(pds_all_stage %>% filter(geog == "Scotland"), measure = stage, measure_text = "Stage of Illness: ")))
+div(style=css(marginBottom="-20px",height="70px"), plot_prop_legend(pds_all_stage %>% filter(geog == "Scotland"), measure = stage, colours = c("#3F3685", "#9B4393", "#0078D4", "#83BB26", "#C73918"))
+    ))
 
 ```
 
@@ -687,8 +693,8 @@ div(style=css(marginBottom="-20px",height="70px"), plot_prop_legend(pds_all_stag
 ```{r plot-prop-stage-hb}
 bscols(widths = 12,
   div(style = css(width="98%", height="400px"),
-      plot_prop(pds_stage_data_hb, measure = stage, measure_text = "Stage of Illness: ", xlabel = "Health Board")
-)
+      plot_prop(pds_stage_data_hb, measure = stage, measure_text = "Stage of Illness: ", xlabel = "Health Board", colours = c("#3F3685", "#9B4393", "#0078D4", "#83BB26", "#C73918"))
+  )
 )
 
 ```
@@ -800,7 +806,7 @@ bscols(widths = c(1,5,NA),
 ```{r plot-ldp-stage-legend}
 bscols(widths = 12,
 div(style=css(height="30px"),
-plot_trend_rate_legend_1(legend_data)),NULL
+plot_rate_line_legend_1(legend_data)),NULL
 )
 
 ```
@@ -808,7 +814,8 @@ plot_trend_rate_legend_1(legend_data)),NULL
 ```{r plot-ldp-stage}
 bscols(widths = 12,
   div(style = css(width="98%", height="350px"),
-plot_ldp_line(ldp_all_stage_data, measure = stage, measure_text = "Stage of Illness: "))
+plot_ldp_line(ldp_all_stage_data, measure = stage, measure_text = "Stage of Illness: ", colours = c("#3F3685", "#9B4393", "#0078D4", "#83BB26", "#C73918"))
+)
 )
 
 # bscols(widths = 12,
@@ -916,7 +923,8 @@ bscols(widths = c(1,5,NA),
 <h2 style="margin-left: 70px; margin-top: 0px; margin-bottom: 0px"> Proportion of Referrals by Model of Care and Integration Authority Area</h2>
 ```{r plot-prop-model-legend-ijb}
 bscols(widths = 12,
-div(style=css(marginBottom="-23px",height="95px", width="90%", marginLeft="35px"), plot_prop_legend(pds_all_model %>% filter(geog == "Scotland"), measure = model, measure_text = "Model of Care: ")))
+div(style=css(marginBottom="-23px",height="95px", width="90%", marginLeft="35px"), plot_prop_legend(pds_all_model %>% filter(geog == "Scotland"), measure = model, colours = c("#3F3685", "#9B4393", "#0078D4", "#948DA3", "#83BB26", "#C73918"))
+    ))
 
 ```
 
@@ -924,7 +932,7 @@ div(style=css(marginBottom="-23px",height="95px", width="90%", marginLeft="35px"
 ```{r plot-prop-model-ijb}
 bscols(widths = 12,
   div(style = css(width="98%", height="400px"),
-      plot_prop(pds_model_data_ijb, measure = model, measure_text = "Model of Care: ", xlabel = "Integration Authority Area")
+      plot_prop(pds_model_data_ijb, measure = model, measure_text = "Model of Care: ", xlabel = "Integration Authority Area", colours = c("#3F3685", "#9B4393", "#0078D4", "#948DA3", "#83BB26", "#C73918"))
 )
 )
 
@@ -993,7 +1001,8 @@ bscols(widths = c(1,5,NA),
 <h2 style="margin-left: 70px; margin-top: 0px; margin-bottom: 0px"> Proportion of Referrals by Model of Care and Health Board </h2>
 ```{r plot-prop-model-legend-hb}
 bscols(widths = 12,
-div(style=css(marginBottom="-23px",height="95px", width="90%", marginLeft="35px"), plot_prop_legend(pds_all_model %>% filter(geog == "Scotland"), measure = model, measure_text = "Model of Care: ")))
+div(style=css(marginBottom="-23px",height="95px", width="90%", marginLeft="35px"), plot_prop_legend(pds_all_model %>% filter(geog == "Scotland"), measure = model, colours = c("#3F3685", "#9B4393", "#0078D4", "#948DA3", "#83BB26", "#C73918"))
+    ))
 
 
 ```
@@ -1002,7 +1011,7 @@ div(style=css(marginBottom="-23px",height="95px", width="90%", marginLeft="35px"
 ```{r plot-prop-model-hb}
 bscols(widths = 12,
   div(style = css(width="98%", height="400px"),
-      plot_prop(pds_model_data_hb, measure = model, measure_text = "Model of Care: ", xlabel = "Health Board")
+      plot_prop(pds_model_data_hb, measure = model, measure_text = "Model of Care: ", xlabel = "Health Board", colours = c("#3F3685", "#9B4393", "#0078D4", "#948DA3", "#83BB26", "#C73918"))
 )
 )
 
@@ -1104,7 +1113,8 @@ data_filter_prop_model_age,NULL)
 <h2 style="margin-left: 70px; margin-top: 0px; margin-bottom: 0px">Proportion of Referrals by Model of Care for All Financial Years (2016/17 - `r current_fy`)</h2>
 ```{r plot-prop-model-legend-age}
 
-bscols(widths = 12, div(style=css(marginBottom="-23px",height="95px", width="90%", marginLeft="35px"), plot_prop_legend(pds_all_model %>% filter(geog == "Scotland"), measure = model, measure_text = "Model of Care: ")))
+bscols(widths = 12, div(style=css(marginBottom="-23px",height="95px", width="90%", marginLeft="35px"), plot_prop_legend(pds_all_model %>% filter(geog == "Scotland"), measure = model, colours = c("#3F3685", "#9B4393", "#0078D4", "#948DA3", "#83BB26", "#C73918"))
+                        ))
 
 ```
 
@@ -1112,7 +1122,7 @@ bscols(widths = 12, div(style=css(marginBottom="-23px",height="95px", width="90%
 ```{r plot-prop-model-age}
 bscols(widths = 12,
   div(style = css(width="98%", height="400px"),
-      plot_prop_2(pds_model_age_data, measure = model, measure_text = "Model of Care: ", measure_2 = age_grp_2)
+      plot_prop_2(pds_model_age_data, measure = model, measure_text = "Model of Care: ", measure_2 = age_grp_2, colours = c("#3F3685", "#9B4393", "#0078D4", "#948DA3", "#83BB26", "#C73918"))
 )
 )
 ```
@@ -1163,7 +1173,8 @@ pds_all_model_age %>%
    arrange(model) %>% 
   select(-total_referrals) %>%
   pivot_wider(names_from = model, values_from = perc_referrals, values_fill = "0%") 
-)
+) %>% 
+  mutate(total_referrals = format(total_referrals, big.mark = ","))
 
 prop_model_age_table_data$geog <- factor(prop_model_age_table_data$geog, levels = unique(pds_all$geog))
 
@@ -1271,7 +1282,8 @@ data_filter_prop_model_sex,NULL)
 <h2 style="margin-left: 70px; margin-top: 0px; margin-bottom: 0px">Proportion of Referrals by Model of Care for All Financial Years (2016/17 - `r current_fy`)</h2>
 ```{r plot-prop-model-legend-sex}
 
-bscols(widths = 12, div(style=css(marginBottom="-23px",height="95px", width="90%", marginLeft="35px"), plot_prop_legend(pds_all_model %>% filter(geog == "Scotland"), measure = model, measure_text = "Model of Care: ")))
+bscols(widths = 12, div(style=css(marginBottom="-23px",height="95px", width="90%", marginLeft="35px"), plot_prop_legend(pds_all_model %>% filter(geog == "Scotland"), measure = model, colours = c("#3F3685", "#9B4393", "#0078D4", "#948DA3", "#83BB26", "#C73918"))
+                        ))
 
 ```
 
@@ -1279,7 +1291,7 @@ bscols(widths = 12, div(style=css(marginBottom="-23px",height="95px", width="90%
 ```{r plot-prop-model-sex}
 bscols(widths = 12,
   div(style = css(width="98%", height="400px"),
-      plot_prop_2(pds_model_sex_data, measure = model, measure_text = "Model of Care: ", measure_2 = sex)
+      plot_prop_2(pds_model_sex_data, measure = model, measure_text = "Model of Care: ", measure_2 = sex, colours = c("#3F3685", "#9B4393", "#0078D4", "#948DA3", "#83BB26", "#C73918"))
 )
 )
 ```
@@ -1330,7 +1342,8 @@ pds_all_model_sex %>%
    arrange(model) %>% 
   select(-total_referrals) %>%
   pivot_wider(names_from = model, values_from = perc_referrals, values_fill = "0%") 
-)# %>% rename(" " = geog)
+)%>% 
+  mutate(total_referrals = format(total_referrals, big.mark = ","))
 
 prop_model_sex_table_data$geog <- factor(prop_model_sex_table_data$geog, levels = unique(pds_all$geog))
 
@@ -1401,7 +1414,7 @@ data_filter_prop_model_simd_geog <- filter_select(id = "filter_prop_model_simd_g
                                    )
 
 data_filter_prop_model_simd <- filter_select(id = "filter_prop_model_simd",
-                                    label = "Select Gender:",
+                                    label = "Select SIMD Quintile:",
                                     group = ~simd,
                                     sharedData = pds_model_simd_data,
                                     multiple = FALSE
@@ -1416,7 +1429,8 @@ data_filter_prop_model_simd,NULL)
 <h2 style="margin-left: 70px; margin-top: 0px; margin-bottom: 0px">Proportion of Referrals by Model of Care for All Financial Years (2016/17 - `r current_fy`)</h2>
 ```{r plot-prop-model-legend-simd}
 
-bscols(widths = 12, div(style=css(marginBottom="-23px",height="95px", width="90%", marginLeft="35px"), plot_prop_legend(pds_all_model %>% filter(geog == "Scotland"), measure = model, measure_text = "Model of Care: ")))
+bscols(widths = 12, div(style=css(marginBottom="-23px",height="95px", width="90%", marginLeft="35px"), plot_prop_legend(pds_all_model %>% filter(geog == "Scotland"), measure = model, colours = c("#3F3685", "#9B4393", "#0078D4", "#948DA3", "#83BB26", "#C73918"))
+             ))
 
 ```
 
@@ -1424,7 +1438,7 @@ bscols(widths = 12, div(style=css(marginBottom="-23px",height="95px", width="90%
 ```{r plot-prop-model-simd}
 bscols(widths = 12,
   div(style = css(width="98%", height="400px"),
-      plot_prop_2(pds_model_simd_data, measure = model, measure_text = "Model of Care: ", measure_2 = simd)
+      plot_prop_2(pds_model_simd_data, measure = model, measure_text = "Model of Care: ", measure_2 = simd, colours = c("#3F3685", "#9B4393", "#0078D4", "#948DA3", "#83BB26", "#C73918"))
 )
 )
 ```
@@ -1475,7 +1489,8 @@ pds_all_model_simd %>%
    arrange(model) %>% 
   select(-total_referrals) %>%
   pivot_wider(names_from = model, values_from = perc_referrals, values_fill = "0%") 
-)# %>% rename(" " = geog)
+)%>% 
+  mutate(total_referrals = format(total_referrals, big.mark = ","))
 
 prop_model_simd_table_data$geog <- factor(prop_model_simd_table_data$geog, levels = unique(pds_all$geog))
 
@@ -1568,7 +1583,7 @@ bscols(widths = c(1,5,NA),
 ```{r plot-ldp-model-legend}
 bscols(widths = 12,
 div(style=css(height="30px"),
-plot_trend_rate_legend_1(legend_data)),NULL
+plot_rate_line_legend_1(legend_data)),NULL
 )
 
 ```
@@ -1576,7 +1591,8 @@ plot_trend_rate_legend_1(legend_data)),NULL
 ```{r plot-ldp-model}
 bscols(widths = 12,
   div(style = css(width="98%", height="400px"),
-plot_ldp_line(ldp_all_model_data, measure = model, measure_text = "Model of Care: ", ncol = 3, nrow = 2))
+plot_ldp_line(ldp_all_model_data, measure = model, measure_text = "Model of Care: ", ncol = 3, nrow = 2, colours = c("#3F3685", "#9B4393", "#0078D4", "#948DA3", "#83BB26", "#C73918"))
+)
 )
 
 # bscols(widths = 12,
@@ -1658,62 +1674,6 @@ Row
 Row {.tabset data-height=920}
 ----------------------------------------------------------------------
 
-### **Health Boards**
-
-```{r dropdown-carer-hb}
-
- table_hb_carer_data <- carer_data %>% 
-      filter(age_grp_2 == "All", simd == "All") %>% 
-      filter(ijb == "All" | ijb == "Scotland") %>% 
-      pivot_wider(names_from = carers_support, values_from = referrals) %>% 
-      mutate(across(where(is.numeric), ~ replace(., is.na(.), 0))) %>% 
-      adorn_totals("col") %>% 
-      select(3,1,9,8,6,7) %>% 
-      mutate(perc_carer = paste0(round(100*Yes/Total,1), "%")) %>%
-  rename("Number of People Referred to PDS" = "Total", 
-             "Health Board" = "health_board",
-              "Number of people with Carer's Support" = "Yes",
-         "Number of people without Carer's Support" = "No",
-         "Number of people where Carer's Support is Not Known" = "Not Known",
-             "Percentage with Carer's Support" = "perc_carer")
-
-
-table_hb_carer <- SharedData$new(table_hb_carer_data)
-
-data_filter_carer_hb <- filter_select(id = "filter_carer_hb_year",
-                                    label = "Select Financial Year of Diagnosis:",
-                                    group = ~fy,
-                                    sharedData = table_hb_carer,
-                                    multiple = FALSE
-                                   )
-bscols(widths = c(1,5,NA),
-       NULL,
-       data_filter_carer_hb,
-       NULL)
-
-```
-
-<h2 style="margin-left: 70px; margin-top: 0px; margin-bottom: 0px">Number and percentage of individuals where PDS work is carried out in conjunction with the family/carer; Health Boards</h2>
-```{r table-carer-hb}
-
-bscols(widths = 12,
-       div(style = css(width="98%", height="710px", margin="15px"),
-          DT::datatable(table_hb_carer, rownames = FALSE,
-              options = list(pageLength = 15,
-                             scrollX = FALSE,
-                             scrollY = TRUE,
-                             dom = "t",
-                             ordering = FALSE,
-                             columnDefs = list(list(visible = FALSE, targets = 0),
-                                               list(className = 'dt-right', targets = 2:6)
-                             ))) %>%
-  DT::formatStyle(2, fontWeight = "bold")
-            )
-       )
-
-
-```
-
 ### **Integration Authority Areas**
 
 ```{r dropdown-carer-ijb}
@@ -1729,6 +1689,7 @@ bscols(widths = 12,
       adorn_totals("col") %>% 
       select(3,2,9,8,6,7) %>% 
       mutate(perc_carer = paste0(round(100*Yes/Total,1), "%")) %>%
+      mutate(across(where(is.numeric), ~format(., big.mark = ","))) %>% 
   rename("Number of People Referred to PDS" = "Total", 
              "Integration Authority Area" = "ijb",
               "Number of people with Carer's Support" = "Yes",
@@ -1777,6 +1738,64 @@ bscols(widths = 12,
 
 ```
 
+### **Health Boards**
+
+```{r dropdown-carer-hb}
+
+ table_hb_carer_data <- carer_data %>% 
+      filter(age_grp_2 == "All", simd == "All") %>% 
+      filter(ijb == "All" | ijb == "Scotland") %>% 
+      pivot_wider(names_from = carers_support, values_from = referrals) %>% 
+      mutate(across(where(is.numeric), ~ replace(., is.na(.), 0))) %>% 
+      adorn_totals("col") %>% 
+      select(3,1,9,8,6,7) %>% 
+      mutate(perc_carer = paste0(round(100*Yes/Total,1), "%")) %>% 
+      mutate(across(where(is.numeric), ~format(., big.mark = ","))) %>% 
+  rename("Number of People Referred to PDS" = "Total", 
+             "Health Board" = "health_board",
+              "Number of people with Carer's Support" = "Yes",
+         "Number of people without Carer's Support" = "No",
+         "Number of people where Carer's Support is Not Known" = "Not Known",
+             "Percentage with Carer's Support" = "perc_carer")
+
+
+table_hb_carer <- SharedData$new(table_hb_carer_data)
+
+data_filter_carer_hb <- filter_select(id = "filter_carer_hb_year",
+                                    label = "Select Financial Year of Diagnosis:",
+                                    group = ~fy,
+                                    sharedData = table_hb_carer,
+                                    multiple = FALSE
+                                   )
+bscols(widths = c(1,5,NA),
+       NULL,
+       data_filter_carer_hb,
+       NULL)
+
+```
+
+<h2 style="margin-left: 70px; margin-top: 0px; margin-bottom: 0px">Number and percentage of individuals where PDS work is carried out in conjunction with the family/carer; Health Boards</h2>
+```{r table-carer-hb}
+
+bscols(widths = 12,
+       div(style = css(width="98%", height="710px", margin="15px"),
+          DT::datatable(table_hb_carer, rownames = FALSE,
+              options = list(pageLength = 15,
+                             scrollX = FALSE,
+                             scrollY = TRUE,
+                             dom = "t",
+                             ordering = FALSE,
+                             columnDefs = list(list(visible = FALSE, targets = 0),
+                                               list(className = 'dt-right', targets = 2:6)
+                             ))) %>%
+  DT::formatStyle(2, fontWeight = "bold")
+            )
+       )
+
+
+```
+
+
 Uptake Decision {data-navmenu="Additional Information"}
 =====================================
 
@@ -1811,59 +1830,6 @@ Row
 Row {.tabset data-height=920}
 ----------------------------------------------------------------------
 
-### **Health Boards**
-
-<h2 style="margin-left: 70px; margin-top: 0px; margin-bottom: 0px"> Referrals by PDS Uptake Decision, Health Boards</h2>
-```{r dropdown-uptake-hb}
-
- table_hb_uptake_data <- uptake_data %>% 
-      filter(age_grp_2 == "All", simd == "All") %>% 
-      filter(ijb == "All" | ijb == "Scotland") %>% 
-      pivot_wider(names_from = pds_uptake_decision, values_from = referrals) %>% 
-      mutate(across(where(is.numeric), ~ replace(., is.na(.), 0))) %>% 
-      adorn_totals("col") %>% 
-      select(3,1,10,6,7,8,9) %>% 
-      rowwise() %>% 
-  mutate(perc_accepted = paste0(round(sum(c_across(4:5))/sum(c_across(3))*100,1), "%")) %>%       rename("Number of People Referred to PDS" = "Total", 
-             "Health Board" = "health_board",
-             "Percentage Accepted" = "perc_accepted")
-
-
-table_hb_uptake <- SharedData$new(table_hb_uptake_data)
-
-data_filter_uptake_hb <- filter_select(id = "filter_uptake_hb_year",
-                                    label = "Select Financial Year of Diagnosis:",
-                                    group = ~fy,
-                                    sharedData = table_hb_uptake,
-                                    multiple = FALSE
-                                   )
-bscols(widths = c(1,5,NA),
-       NULL,
-       data_filter_uptake_hb,
-       NULL)
-
-```
-
-```{r table-uptake-hb}
-
-bscols(widths = 12,
-       div(style = css(width="98%", height="710px", margin="15px"),
-          DT::datatable(table_hb_uptake, rownames = FALSE,
-              options = list(pageLength = 15,
-                             scrollX = FALSE,
-                             scrollY = TRUE,
-                             dom = "t",
-                             ordering = FALSE,
-                             columnDefs = list(list(visible = FALSE, targets = 0),
-                                               list(className = 'dt-right', targets = 2:7)
-                             ))) %>%
-  DT::formatStyle(2, fontWeight = "bold")
-            )
-       )
-
-
-```
-
 ### **Integration Authority Areas**
 
 <h2 style="margin-left: 70px; margin-top: 0px; margin-bottom: 0px"> Referrals by PDS Uptake Decision, Integration Authority Areas</h2>
@@ -1880,7 +1846,9 @@ bscols(widths = 12,
       adorn_totals("col") %>% 
       select(3,2,10,6,7,8,9) %>% 
       rowwise() %>% 
-  mutate(perc_accepted = paste0(round(sum(c_across(4:5))/sum(c_across(3))*100,1), "%")) %>%       rename("Number of People Referred to PDS" = "Total",
+  mutate(perc_accepted = paste0(round(sum(c_across(4:5))/sum(c_across(3))*100,1), "%")) %>%   
+      mutate(across(where(is.numeric), ~format(., big.mark = ","))) %>% 
+  rename("Number of People Referred to PDS" = "Total",
              "Integration Authority Area" = "ijb",
              "Percentage Accepted" = "perc_accepted")
 
@@ -1922,6 +1890,62 @@ bscols(widths = 12,
 
 
 ```
+
+### **Health Boards**
+
+<h2 style="margin-left: 70px; margin-top: 0px; margin-bottom: 0px"> Referrals by PDS Uptake Decision, Health Boards</h2>
+```{r dropdown-uptake-hb}
+
+ table_hb_uptake_data <- uptake_data %>% 
+      filter(age_grp_2 == "All", simd == "All") %>% 
+      filter(ijb == "All" | ijb == "Scotland") %>% 
+      pivot_wider(names_from = pds_uptake_decision, values_from = referrals) %>% 
+      mutate(across(where(is.numeric), ~ replace(., is.na(.), 0))) %>% 
+      adorn_totals("col") %>% 
+      select(3,1,10,6,7,8,9) %>% 
+      rowwise() %>% 
+  mutate(perc_accepted = paste0(round(sum(c_across(4:5))/sum(c_across(3))*100,1), "%")) %>%   
+      mutate(across(where(is.numeric), ~format(., big.mark = ","))) %>% 
+  rename("Number of People Referred to PDS" = "Total", 
+             "Health Board" = "health_board",
+             "Percentage Accepted" = "perc_accepted")
+
+
+table_hb_uptake <- SharedData$new(table_hb_uptake_data)
+
+data_filter_uptake_hb <- filter_select(id = "filter_uptake_hb_year",
+                                    label = "Select Financial Year of Diagnosis:",
+                                    group = ~fy,
+                                    sharedData = table_hb_uptake,
+                                    multiple = FALSE
+                                   )
+bscols(widths = c(1,5,NA),
+       NULL,
+       data_filter_uptake_hb,
+       NULL)
+
+```
+
+```{r table-uptake-hb}
+
+bscols(widths = 12,
+       div(style = css(width="98%", height="710px", margin="15px"),
+          DT::datatable(table_hb_uptake, rownames = FALSE,
+              options = list(pageLength = 15,
+                             scrollX = FALSE,
+                             scrollY = TRUE,
+                             dom = "t",
+                             ordering = FALSE,
+                             columnDefs = list(list(visible = FALSE, targets = 0),
+                                               list(className = 'dt-right', targets = 2:7)
+                             ))) %>%
+  DT::formatStyle(2, fontWeight = "bold")
+            )
+       )
+
+
+```
+
 
 ```{js }
 function filter_default() {
